# ReDefine

./: .appveyor.yml  .gitignore  Build.cmake  Build.cmd  Build.sh  CMakeLists.txt  Defines.cpp  Functions.cpp  Main.cpp  Operators.cpp  Raw.cpp  ReDefine.cpp  ReDefine.h  Script.cpp  StdFilesystem.h  Text.cpp
.github/workflows/: Build.yml  build.yml
Legacy/: README.md
Misc/: DoAutoGVAR.cpp  FindUnusedDefines.cpp
Source/: .clang-tidy  CMakeLists.txt  Defines.cpp  Functions.cpp  Ini.cpp  Log.cpp  Main.cpp  Operators.cpp  Raw.cpp  ReDefine.cpp  ReDefine.h  Script.cpp  StdFilesystem.h  Text.cpp  Variables.cpp
Source/CMake/: StdFilesystem.cmake  StdFilesystem.h
Source/Executable/: Main.cpp
Source/Test/: CMakeLists.txt  Run.cmake
Source/Test/Extraction/: InnerFunctionWithOperator.test  VariableNoSemicolon.test  Variables.test
Source/Test/FormatFunctions/0_UNCHANGED/: Check.test
Source/Test/FormatFunctions/0_UNCHANGED/Script/DoArgumentsErase/: 2Arguments.test  3Arguments.0.test  3Arguments.1.test
Source/Test/FormatFunctions/0_UNCHANGED/Script/DoArgumentsMoveBack/: 3Arguments.0.test  3Arguments.1.test  ReDefine.cfg
Source/Test/FormatFunctions/0_UNCHANGED/Script/DoArgumentsMoveFront/: 2Arguments.test  3Arguments.1.test  3Arguments.2.test
Source/Test/FormatFunctions/1_WIDE/: Check.test
Source/Test/FormatFunctions/2_MEDIUM/: Check.test
Source/Test/FormatFunctions/3_TIGHT/: Check.test
Source/Test/FormatFunctions/INVALID/: Less.test  More.test
Source/Test/Issue/8/: Check.test  ReDefine.cfg  ReDefine.test
Source/Test/Negate/: Check.test
Source/Test/SCRIPT_FORMAT_UNCHANGED/DoArgumentsErase/: 2Arguments.test  3Arguments.0.test  3Arguments.1.test
Source/Test/SCRIPT_FORMAT_UNCHANGED/DoArgumentsMoveBack/: 3Arguments.0.test  3Arguments.1.test
Source/Test/SCRIPT_FORMAT_UNCHANGED/DoArgumentsMoveFront/: 2Arguments.test  3Arguments.1.test  3Arguments.2.test
Source/Test/Script/DoArgumentCache/: Nested.test  Simple.test
Source/Test/Script/DoArgumentResult/: Simple.test
Source/Test/Script/DoArgumentSet/: Check.test
Source/Test/Script/DoArgumentSetPrefix/: Check.test
Source/Test/Script/DoArgumentSetSuffix/: Check.test
Source/Test/Script/DoArgumentsClear/: Check.test
Source/Test/Script/DoArgumentsErase/: First.test  Last.test  Middle.test
Source/Test/Script/DoArgumentsMoveBack/: Check.test
Source/Test/Script/DoArgumentsMoveFront/: Check.test
Source/Test/Script/DoArgumentsPushBack/: Check.test
Source/Test/Script/DoArgumentsPushBackCached/: Simple.test
Source/Test/Script/DoArgumentsPushFront/: Check.test
Source/Test/Script/DoArgumentsPushFrontCached/: Simple.test
Source/Test/Script/DoArgumentsResize/: Clear.test  Less.test  More.test  MoreNamed.test
Source/Test/Script/DoFunction/: Name.test  NoName.test
Source/Test/Script/DoFunctionAround/: Variable.test
Source/Test/Script/DoFunctionAroundArgument/: 1Argument.test  2Arguments.0.test  2Arguments.1.test
Source/Test/Script/DoNameSet/: Function.test  Variable.test
Source/Test/Script/DoNameSetCached/: Check.test
Source/Test/Script/DoNameSetPrefix/: Check.test
Source/Test/Script/DoNameSetSuffix/: Check.test
Source/Test/Script/DoOperatorSet/: OperatorOnly.test  OperatorValue.test
Source/Test/Script/DoOperatorValueCache/: Check.test
Source/Test/Script/DoVariable/: Name.test  NoName.test
Source/Test/Script/DoVariable/Minimize/: NoRestart.test  ReDefine.cfg  Restart.test
Source/Test/Script/IfArgumentCondition/: Colon.test
Source/Test/Script/RunOnDemand/: Priority.test  RunAfter.test  RunBefore.test
